first draft of hello-FOSS official website

--- a/_config.yml
+++ b/_config.yml
@@ -2,26 +2,25 @@
 #
 
 # Site settings
-title: Spectral
+title: <font color = '#ff0090'>Hello-FOSS </font>
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
-first_published: 2016 # if migrating another site, the year of your first publish
+  Official Website of the <font color = '#ff0090'>Hello-FOSS </font>festival  
+  organised by [WnCC, IITB](https://www.wncc-iitb.org/) 
+owner: WnCC, IIT Bombay # or company name
+first_published: 2020 # if migrating another site, the year of your first publish
 email: your-email@domain.com
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
+  #twitter: https://twitter.com/<username>
+  github: https://github.com/wncc
+  #linkedin-square: https://linkedin.com/in/<username>
+  facebook-official: https://www.facebook.com/wncc.iitb
+  #google-plus-square: https://plus.google.com/u/0/+<username>
   #email: /contact/
   #flickr:
-  #instagram:
-  #youtube-square:
+  instagram: https://www.instagram.com/wncc.iitb/
+  youtube-square: https://www.youtube.com/channel/UCs3x_XxwScIAzDUfN1lbbGw
   #spotify:
   #stack-overflow:
   #vimeo:
